:lipstick: :art: Access limited by user role.

--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -20,39 +20,45 @@
         <div>
           <a class="nav-text" href="/patterns">Patrones</a>
         </div>
-        <div class="hide-500">
-          <a class="nav-text"  href="/categories">Categorías</a>
-        </div>
-        <div class="hide-690">
-          <a class="nav-text" href="/materials">Materiales</a>
-        </div>
-        <!-- dar la opción de que el admin pueda ver esto-->
-        <div class="hide-750">
-            <a class="nav-text" href="/users">Usuarios</a>
-        </div>
-        <div>
-            <% if (currentUser) { %>
-              <span class="name">Hola <%= currentUser.username %>!</span>
-              <form action="<%= destroySessionPath %>" method="post">
-                <input type="hidden" name="_method" value="delete" />
-                <input type="submit" value="Cerrar Sesión" />
-              </form>
-            <% } else { %>
-              <a class="nav-text" href="<%= newSessionPath %>">Iniciar Sesión</a>
-            <% } %>
-            <% if (flashMessage) { %>
-              <div class="alert-container"><br>
-                <center><%= flashMessage.warning %></center>
-              </div>
-            <% } %>
-        </div>
+        <% if ((currentUser) && ((currentUser.role === 'admin') || (currentUser.role === 'top'))) { %>
+          <div class="hide-500">
+            <a class="nav-text"  href="/categories">Categorías</a>
+          </div>
+          <div class="hide-690">
+            <a class="nav-text" href="/materials">Materiales</a>
+          </div>
+        <% } %>
+        <% if ((currentUser) && (currentUser.role === 'admin')) { %>
+          <div class="hide-750">
+              <a class="nav-text" href="/users">Usuarios</a>
+          </div>
+        <% } %>
+        <% if (currentUser) { %>
+          <div class="hide-750">
+            <a class="nav-text" href="/users/<%- currentUser.id %>">Perfil</a>
+          </div>
+          <div>
+            <span class="name">Hola <%= currentUser.username %>!</span>
+            <form action="<%= destroySessionPath %>" method="post">
+              <input type="hidden" name="_method" value="delete" />
+              <input type="submit" value="Cerrar Sesión" />
+            </form>
+          </div>
+        <% } else { %>
+          <div>
+            <a class="nav-text" href="<%= newSessionPath %>">Iniciar Sesión</a>
+          </div>
+        <% } %>
+        <% if (flashMessage) { %>
+          <div class="alert-container"><br>
+            <center><%= flashMessage.warning %></center>
+          </div>
+        <% } %>
         <div class="nav-text">
-
         </div>
       </div>
     </header>
     <%- body %>
     <script src="<%= assetPath('app.js') %>"></script>
   </body>
-
 </html>
