--- a/src/views/patterns/edit.html.ejs
+++ b/src/views/patterns/edit.html.ejs
@@ -2,7 +2,7 @@
 <h1>Editar Patrón de Dibujo</h1>
 <%- include('_form') %>
 <div id="button">
-    <form action="<%- patternsPath %>">
+    <form action="<%- patternPath %>">
         <input type="submit" value="Volver" />
     </form>
 </div>
