--- a/src/views/categories/index.html.ejs
+++ b/src/views/categories/index.html.ejs
@@ -13,7 +13,7 @@
     <thead>
         <tr>
           <th>Nombre</th>
-          <th>Puntaje</th>
+          <th>Descripción</th>
           <th colspan="2">Acciones</th>
         </tr>
     </thead>
@@ -21,6 +21,7 @@
       <% categoriesList.forEach((category) => { %>
         <tr>
           <td><%- category.name %></td>
+          <td><%- category.description %></td>
           <td>
             <form action="<%- editCategoryPath(category) %>">
               <input type="submit" value="Editar" />
