--- a/src/views/materials/new.html.ejs
+++ b/src/views/materials/new.html.ejs
@@ -1,8 +1,9 @@
-<br>
-<h1>Nuevo Material</h1>
-<%- include('_form') %>
-<div id="button">
-    <form action="<%- materialsPath %>">
-        <input type="submit" value="Volver" />
-    </form>
-</div>
+
+<div class="contenedor-body" id="body-container">
+    <div class="content-new-user">
+      <h1 class="panel-content">Nuevo Material</h1>
+    </div>
+    <div class="content-new-user">
+      <%- include('_form') %>
+    </div>
+  </div>
