--- a/src/assets/styles/materials_show.scss
+++ b/src/assets/styles/materials_show.scss
@@ -50,10 +50,10 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  flex-wrap: wrap;
   height: 200px;
-  overflow-y: scroll;
+  width: 100%;
   margin-top: 20px;
+  overflow-y: scroll;
 }
 
 .material_container{
