--- a/src/views/categories/new.html.ejs
+++ b/src/views/categories/new.html.ejs
@@ -1,8 +1,8 @@
-<br>
-<h1>Nueva Categoría</h1>
-<%- include('_form') %>
-<div id="button">
-    <form action="<%- categoriesPath %>">
-        <input type="submit" value="Volver" />
-    </form>
+<div class="contenedor-body" id="body-container">
+  <div class="content-new-user">
+    <h1 class="panel-content">Nueva Categoría</h1>
+  </div>
+  <div class="content-new-user">
+    <%- include('_form') %>
+  </div>
 </div>
