--- a/src/views/session/new.html.ejs
+++ b/src/views/session/new.html.ejs
@@ -8,7 +8,6 @@
       </div>
       <div >
         <h1 class="title">Knitter
-
         </h1>
       </div>
       <div >
@@ -33,7 +32,7 @@
             <label for="password"><p class="label-content">Contraseña:</p></label>
           </div>
           <div class="body-item">
-            <input class="input" type="password" name="password" value="<%= locals.password %>" />
+            <input class="input" type="password" name="password" />
           </div>
           <div class="body-item">
               <div class="end-user-login">
