--- a/src/views/categories/_form.html.ejs
+++ b/src/views/categories/_form.html.ejs
@@ -14,16 +14,16 @@
     <% } %>
     <div id="panel">
       <div class="panel-content">
-        <label class="user-parag-list" for="name">Nombre:</label>
+        <label class="parag-list" for="name">Nombre:</label>
       </div>
       <div class="panel-content">
-        <input type="text" name="name" size="40" value="<%= category.name %>" required/>
+        <input class="input-list" type="text" name="name" size="40" value="<%= category.name %>" required/>
       </div>
       <div class="panel-content">
-        <label class="user-parag-list" for="description">Descripción:</label>
+        <label class="parag-list" for="description">Descripción:</label>
       </div>
       <div class="panel-content">
-        <textarea rows="8" cols="100" type="text" required name="description"><%= category.description %></textarea>      </div>
+        <textarea class="input-list" rows="8" cols="100" type="text" required name="description"><%= category.description %></textarea>      </div>
       <div class="button_space">
         <% if (category.isNewRecord) { %>
           <input  id="boton" type="submit" name="create" value="Crear" />
