--- a/src/views/categories/edit.html.ejs
+++ b/src/views/categories/edit.html.ejs
@@ -1,9 +1,9 @@
 
-<div class="contenedor-body" id="body-container">
-  <div class="content-new-user">
+<div class="content-body">
+  <div class="content-sub-form">
     <h1 class="panel-content">Editar Categoría</h1>
   </div>
-  <div class="content-new-user">
+  <div class="content-sub-form">
     <%- include('_form') %>
   </div>
 </div>
