--- a/src/views/materials/edit.html.ejs
+++ b/src/views/materials/edit.html.ejs
@@ -1,10 +1,10 @@
 
 
-<div class="contenedor-body" id="body-container">
-  <div class="content-new-user">
+<div class="content-body">
+  <div class="content-sub-form">
     <h1 class="panel-content">Editar Material</h1>
   </div>
-  <div class="content-new-user">
+  <div class="content-sub-form">
     <%- include('_form') %>
   </div>
 </div>
