--- a/src/views/users/new.html.ejs
+++ b/src/views/users/new.html.ejs
@@ -1,8 +1,8 @@
-<div class="contenedor-body" id="body-container">
-  <div class="content-new-user">
+<div class="content-body" >
+  <div class="content-sub-form">
     <h1 class="panel-content">Regístrate!</h1>
   </div>
-  <div class="content-new-user">
+  <div class="content-sub-form">
     <%- include('_form') %>
   </div>
 </div>
