:ok_hand: Edit & New Pattern CSS

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,4 +3,5 @@
 @import './user_loggin';
 @import './user_list';
 @import './new_user';
-@import './materials_show'
+@import './materials_show';
+@import './materials_pattern_create'
