--- a/src/views/patterns/new.html.ejs
+++ b/src/views/patterns/new.html.ejs
@@ -1,8 +1,9 @@
-<br>
-<h1>Nuevo Patrón de Dibujo</h1>
-<%- include('_form') %>
-<div id="button">
-    <form action="<%- patternsPath %>">
-        <input type="submit" value="Volver" />
-    </form>
+
+<div class="content-body" >
+  <div class="content-sub-form">
+    <h1 class="panel-content">Nuevo Patrón de Dibujo</h1>
+  </div>
+  <div class="content-sub-form">
+    <%- include('_form') %>
+  </div>
 </div>
