--- a/src/views/patterns/_form.html.ejs
+++ b/src/views/patterns/_form.html.ejs
@@ -1,72 +1,99 @@
-<div>
-    <% if (locals.errors) { %>
-      <div class="errors">
-        <ul>
-          <% errors.forEach(error => { %>
-            <li><%= error.message %></li>
-          <% }); %>
-        </ul>
-      </div>
+<div class="form">
+  <% if (locals.errors) { %>
+    <div class="errors">
+      <ul>
+        <% errors.forEach(error => { %>
+          <li><%= error.message %></li>
+        <% }); %>
+      </ul>
+    </div>
+  <% } %>
+  <form action="<%= submitPatternPath %>" method="post">
+    <% if (!pattern.isNewRecord) { %>
+      <input type="hidden" name="_method" value="patch" />
     <% } %>
-    <form action="<%= submitPatternPath %>" method="post">
-      <% if (!pattern.isNewRecord) { %>
-        <input type="hidden" name="_method" value="patch" />
-      <% } %>
-      <div id="hcontainer">
-        <div id="left">
-        <div>
-          <label for="name">Nombre:</label>
-          <input type="text" name="name" size="40" value="<%= pattern.name %>" required/>
-        </div>
-        <div>
-          <label for="image">Imagen:</label><br>
-          <input type="text" name="image" size="40" value="<%= pattern.image %>" required/>
-        </div>
-        <div>
-          <label for="tension">Tensión:</label>
-          <input type="text" name="tension" size="40" value="<%= pattern.tension %>" required/>
-        </div>
-        <div>
-          <label for="video">Link a Video (opcional):</label>
-          <input type="text" name="video" size="40" value="<%= pattern.video %>" />
-        </div>
-        <div>
-          <label for="instructions">Instrucciones:</label><br><br>
-          <textarea rows="8" cols="80" type="text" required name="instructions"><%= pattern.instructions %></textarea>
-        </div>
-        <div>
-          <% if (pattern.isNewRecord) { %>
-            <div>
-              <label for="categoryId">Categoría:</label>
-              <select name="categoryId" required>
-                <% categoriesList.forEach(category => { %>
-                  <option value="<%- category.id %>"><%- category.name %></option>
-                <% }); %>
-              </select>
-            </div>
-            <input type="submit" name="create" value="Crear" />
-          <% } else { %>
-            <input type="submit" name="update" value="Actualizar" />
-          <% } %>
-        </div>
-        </div>
-        <div id="middle">
-        </div>
-        <div id="right">
-          <% if (!pattern.isNewRecord) { %>
-            <p>Materiales Actuales:</p>
-            <% materials.forEach(material => { %>
-                <p>- <%- material.name %><br>
-            <% }); %>
-            <br>
-            <label for="materials">Nuevos Materiales:</label><br>
-          <% } else { %>
-            <label for="materials">Materiales:</label><br>
-          <% } %>
-          <% materialsList.forEach(material => { %>
-            <input type="checkbox" name="materials" value="<%- material.id %>"><%- material.name %><br>
-          <% }); %>
-        </div>
+    <div class="panel">
+      <div class="panel-content">
+        <label class="parag-list" for="name">Nombre:</label>
       </div>
-    </form>
-  </div>
+      <div class="panel-content">
+        <input type="text" name="name" size="40" value="<%= pattern.name %>" required/>
+      </div>
+      <div class="panel-content">
+        <label class="parag-list" for="image">Imagen:</label>
+      </div>
+      <div class="panel-content">
+        <input type="text" name="image" size="40" value="<%= pattern.image %>" required/>
+      </div>
+      <div class="panel-content">
+        <label class="parag-list" for="tension">Tensión:</label>
+      </div>
+      <div class="panel-content">
+        <input type="text" name="tension" size="40" value="<%= pattern.tension %>" required/>
+      </div>
+      <div class="panel-content">
+        <label class="parag-list" for="video">Link a Video (opcional):</label>
+      </div>
+      <div class="panel-content">
+        <input type="text" name="video" size="40" value="<%= pattern.video %>" />
+      </div>
+      <div class="panel-content">
+        <label class="parag-list" for="instructions">Instrucciones:</label>
+      </div>
+      <div class="panel-content">
+        <textarea rows="8" cols="80" type="text" required name="instructions"><%= pattern.instructions %></textarea>
+      </div>
+
+      <% if (pattern.isNewRecord) { %>
+        <div class="panel-content" id="category-pattern">
+          <label class="parag-list" for="categoryId">Categoría:</label>
+          <select class="category-select" name="categoryId" required>
+            <% categoriesList.forEach(category => { %>
+              <option value="<%- category.id %>"><%- category.name %></option>
+            <% }); %>
+          </select>
+        </div>
+
+      <% if (!pattern.isNewRecord) { %>
+        <div class="panel-content">
+          <p class="parag-list">Materiales Actuales:</p>
+        </div>
+        <div class="material-checkbox-content">
+          <% materials.forEach(material => { %>
+            <div class="material-checkbox">
+              <p class="parag-list"> <%- material.name %> </p>
+            </div>
+            <div class="material-checkbox">
+              <input class="checkbox" type="checkbox" name="materials" value="<%- material.id %>">
+            </div>
+        <% }); %>
+        </div>
+
+        <div class="panel-content">
+          <label class="parag-list" for="materials">Nuevos Materiales:</label><br>
+        </div>
+
+      <% } else { %>
+        <label class="parag-list" for="materials">Materiales:</label><br>
+      <% } %>
+      <div class="material-checkbox-content">
+        <% materialsList.forEach(material => { %>
+          <div class="checkbox-container">
+            <div class="material-checkbox">
+              <p class="parag-list"> <%- material.name %> </p>
+            </div>
+            <div class="material-checkbox">
+              <input class="checkbox" type="checkbox" name="materials" value="<%- material.id %>">
+            </div>
+          </div>
+        <% }); %>
+      </div>
+      <div class="panel-content">
+        <input class="button-pattern" id="boton" type="submit" name="create" value="Crear" />
+        <% } else { %>
+          <input class="button-pattern" id="boton" type="submit" name="update" value="Actualizar" />
+        <% } %>
+      </div>
+    </div>
+  </form>
+</div>
