--- a/src/views/patterns/edit.html.ejs
+++ b/src/views/patterns/edit.html.ejs
@@ -1,8 +1,9 @@
-<br>
-<h1>Editar Patrón de Dibujo</h1>
-<%- include('_form') %>
-<div id="button">
-    <form action="<%- patternPath %>">
-        <input type="submit" value="Volver" />
-    </form>
-</div>
+
+<div class="content-body" >
+    <div class="content-sub-form">
+      <h1 class="panel-content">Editar Patrón de Dibujo</h1>
+    </div>
+    <div class="content-sub-form">
+      <%- include('_form') %>
+    </div>
+  </div>
