:ok_hand: pattern show Pattern

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -4,4 +4,6 @@
 @import './user_list';
 @import './new_user';
 @import './materials_show';
-@import './materials_pattern_create'
+@import './materials_pattern_create';
+@import './pattern_index';
+@import './pattern_show';
