--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -1,71 +1,106 @@
-<br>
-<h1><%- pattern.name %></h1>
-<% if ((currentUser) && ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin'))) { %>
-  <div>
-    <form action="<%- editPatternPath %>">
-      <input type="submit" value="Editar" />
-    </form>
-    <form action="<%- deletePatternPath %>" onclick="return confirm('Estás seguro?');"
-      method="POST">
-      <input type="hidden" name="_method" value="delete" />
-      <input type="submit" value="Eliminar" />
-    </form>
+
+
+<div class="contenedor-body-show">
+  <div class="material-show-head">
+    <div class="material-show-element">
+      <h1><%- pattern.name %></h1>
+    </div>
+    <% if ((currentUser) && ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin'))) { %>
+      <div class="material-show-element">
+        <form action="<%- editPatternPath %>">
+          <input class="material-add-button" type="submit" value="E" />
+        </form>
+      </div>
+      <div class="material-show-element">
+        <form action="<%- deletePatternPath %>" onclick="return confirm('Estás seguro?');"
+          method="POST">
+          <input type="hidden" name="_method" value="delete" />
+          <input class="material-add-button" type="submit" value="-" />
+        </form>
+      </div>
+    <% } %>
   </div>
-<% } %>
-<br>
-<div id="hcontainer">
-    <div id="left">
-        <h4><%- pattern.image %></h4>
-    </div>
-    <div id="middle">
-        <p>Diseñado por: <%- author.username %></p>
-        <p>Categoría: <%- category.name %></p>
-        <p>Tensión: <%- pattern.tension %></p>
-        <p>Puntaje: <%- pattern.score %>/5</p>
-        <p>Materiales:</p>
-        <% materials.forEach(material => { %>
-            <p>- <%- material.name %><br>
-        <% }); %>
-    </div>
-    <div id="right">
-        <iframe allowFullScreen="allowFullScreen" src="https://www.youtube.com/embed/<%= pattern.video.slice(32) %>?ecver=1&amp;iv_load_policy=1
+  <div class="show-pattern-body">
+    <div class="content-body-header">
+      <div class="picture-show">
+        <h4> </h4>
+      </div>
+      <div class="center-header">
+        <div class="center-header-content">
+          <div>
+            <p class="parag">Diseñado por: <%- author.username %></p>
+          </div>
+          <div>
+            <p class="parag">Categoría: <%- category.name %></p>
+          </div>
+          <div>
+            <p class="parag">Tensión: <%- pattern.tension %></p>
+          </div>
+          <div>
+            <p class="parag">Puntaje: <%- pattern.score %>/5</p>
+          </div>
+          <div >
+            <p class="parag">Materiales:</p>
+          </div>
+          <div>
+            <% materials.forEach(material => { %>
+              <p class="parag-list">- <%- material.name %><br>
+            <% }); %>
+          </div>
+          <div>
+            <% if (currentUser) { %>
+              <%- include('../vote_patterns/_form') %>
+            <% } %>
+          </div>
+        </div>
+      </div>
+      <div class="youtube-video">
+        <iframe class="youtube" allowFullScreen="allowFullScreen" src="https://www.youtube.com/embed/<%= pattern.video.slice(32) %>?ecver=1&amp;iv_load_policy=1
             &amp;rel=0&amp;yt:stretch=16:9&amp;autohide=1&amp;color=red"
         width="80%" height="160%" allowtransparency="true" frameborder="0">
         </iframe>
+      </div>
     </div>
-</div>
-<br><br>
-<div id="long">
-    <%- pattern.instructions %>
-</div>
-<% if (currentUser) { %>
-  <%- include('../vote_patterns/_form') %>
-<% } %>
-<br><br>
-<h2><%= patternComments.length %> Comentarios</h2>
-<div id="long">
-  <% if (currentUser) { %>
-    <%- include('../comments/_form') %>
-  <% } %>
-  <% patternComments.forEach(comment => { %>
-    <div id="hcontainer">
-      <p><%- comment[0].content %></p>
-      posteado por <%- comment[1].username %>
-      <% if ((currentUser) && ((currentUser.id === comment[1].id) || (currentUser.role === 'admin'))) { %>
-        <form action="<%- editCommentPath(comment[0]) %>">
-          <input type="submit" value="Editar" />
-        </form>
-        <form action="<%- deleteCommentPath(comment[0]) %>" onclick="return confirm('Estás seguro?');" method="POST">
-          <input type="hidden" name="_method" value="delete" />
-          <input type="submit" value="Eliminar" />
-        </form>
-      <% } %>
+  </div>
+  <div class="middle-show">
+    <div >
+        <div id="long">
+            <%- pattern.instructions %>
+        </div>
+
+        <br><br>
+        <h2><%= patternComments.length %> Comentarios</h2>
+        <div id="long">
+          <% if (currentUser) { %>
+            <%- include('../comments/_form') %>
+          <% } %>
+          <% patternComments.forEach(comment => { %>
+            <div id="hcontainer">
+              <p><%- comment[0].content %></p>
+              posteado por <%- comment[1].username %>
+              <% if ((currentUser) && ((currentUser.id === comment[1].id) || (currentUser.role === 'admin'))) { %>
+                <form action="<%- editCommentPath(comment[0]) %>">
+                  <input type="submit" value="Editar" />
+                </form>
+                <form action="<%- deleteCommentPath(comment[0]) %>" onclick="return confirm('Estás seguro?');" method="POST">
+                  <input type="hidden" name="_method" value="delete" />
+                  <input type="submit" value="Eliminar" />
+                </form>
+              <% } %>
+            </div>
+          <% }) %>
+        </div>
+        <br><br>
+        <div id="button">
+            <form action="<%- patternsPath %>">
+                <input type="submit" value="Volver" />
+            </form>
+        </div>
     </div>
-  <% }) %>
+    <div>
+
+    </div>
+  </div>
 </div>
-<br><br>
-<div id="button">
-    <form action="<%- patternsPath %>">
-        <input type="submit" value="Volver" />
-    </form>
-</div>
+
+
