--- a/src/views/vote_patterns/_form.html.ejs
+++ b/src/views/vote_patterns/_form.html.ejs
@@ -17,13 +17,13 @@
       </div>
     <% } %>
     <div>
-      <label for="rating">Calidad:</label>
-      <select name="rating" required>
+      <label  class="parag" for="rating">Calidad:</label>
+      <select  name="rating" required>
         <% options.forEach(option => { %>
-          <option value="<%- option %>"><%- option %></option>
+          <option value="<%- option %>"><% option %></option>
         <% }); %>
       </select>
     </div>
-    <input type="submit" name="create" value="Puntuar" />
+    <input id="boton-vote" type="submit" name="create" value="Puntuar" />
   </form>
 </div>
