:art: :lipstick: Some minor frontend additions.

--- a/src/views/categories/edit.html.ejs
+++ b/src/views/categories/edit.html.ejs
@@ -5,5 +5,9 @@
   </div>
   <div class="content-sub-form">
     <%- include('_form') %>
+  </div><br>
+  <form action="<%- categoriesPath %>">
+    <input class="boton-material" id="boton-material" type="submit" value="Volver" />
+  </form>
   </div>
 </div>
