--- a/src/views/categories/new.html.ejs
+++ b/src/views/categories/new.html.ejs
@@ -4,5 +4,8 @@
   </div>
   <div class="content-sub-form">
     <%- include('_form') %>
-  </div>
+  </div><br>
+  <form action="<%- categoriesPath %>">
+    <input class="boton-material" id="boton-material" type="submit" value="Volver" />
+  </form>
 </div>
