--- a/src/views/patterns/new.html.ejs
+++ b/src/views/patterns/new.html.ejs
@@ -5,5 +5,10 @@
   </div>
   <div class="content-sub-form">
     <%- include('_form') %>
+  </div><br>
+  <div>
+    <form action="<%- patternsPath %>">
+      <input class="boton-material" id="boton-material" type="submit" value="Volver" />
+    </form>
   </div>
 </div>
