--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -64,7 +64,7 @@
   </div>
   <div class="middle-show">
     <div class="instruction-content">
-      <h2>Intrucciones:</h2>
+      <h2>Instrucciones:</h2>
       <p><%- pattern.instructions %></p>
     </div>
     <div class="comment-form">
@@ -101,9 +101,11 @@
       <% }}); %>
     </div>
   </div>
-  <form action="<%- patternsPath %>">
-      <input type="submit" value="Volver" />
-  </form>
+  <div>
+    <form action="<%- patternsPath %>">
+        <input type="submit" value="Volver" />
+    </form>
+  </div>
 </div>
 
 
