--- a/src/views/materials/new.html.ejs
+++ b/src/views/materials/new.html.ejs
@@ -1,9 +1,14 @@
 
 <div class="content-body">
-    <div class="content-sub-form">
-      <h1 class="panel-content">Nuevo Material</h1>
-    </div>
-    <div class="content-sub-form">
-      <%- include('_form') %>
-    </div>
+  <div class="content-sub-form">
+    <h1 class="panel-content">Nuevo Material</h1>
   </div>
+  <div class="content-sub-form">
+    <%- include('_form') %>
+  </div><br>
+  <div class="material-show-element">
+    <form action="<%- materialsPath %>">
+      <input class="boton-material" id="boton-material" type="submit" value="Volver" />
+    </form>
+  </div>
+</div>
