--- a/src/views/patterns/edit.html.ejs
+++ b/src/views/patterns/edit.html.ejs
@@ -1,9 +1,14 @@
 
 <div class="content-body" >
-    <div class="content-sub-form">
-      <h1 class="panel-content">Editar Patrón de Dibujo</h1>
-    </div>
-    <div class="content-sub-form">
-      <%- include('_form') %>
-    </div>
+  <div class="content-sub-form">
+    <h1 class="panel-content">Editar Patrón de Dibujo</h1>
   </div>
+  <div class="content-sub-form">
+    <%- include('_form') %>
+  </div><br>
+  <div>
+    <form action="<%- patternPath %>">
+      <input class="boton-material" id="boton-material" type="submit" value="Volver" />
+    </form>
+  </div>
+</div>
