--- a/src/views/patterns/index.html.ejs
+++ b/src/views/patterns/index.html.ejs
@@ -52,14 +52,17 @@
                   <input id="boton" type="submit" value="Eliminar" />
                 </form>
                 </div>
-              <% } else { %>
-              <p>Ninguna!</p>
               <% } %>
           </div>
         </div>
         <% }})}; %>
       </div>
     </div>
+  </div>
+  <div>
+    <form action="<%- rootPath %>">
+      <input class="boton-material" id="boton-material" type="submit" value="Volver" />
+    </form>
   </div>
 </div>
 
