--- a/src/views/session/new.html.ejs
+++ b/src/views/session/new.html.ejs
@@ -48,4 +48,9 @@
       </div>
     </div>
   </div>
+  <div>
+    <form action="<%- rootPath %>">
+      <input class="boton-material" id="boton-material" type="submit" value="Volver" />
+    </form>
+  </div>
 </div>
