--- a/src/views/users/new.html.ejs
+++ b/src/views/users/new.html.ejs
@@ -4,5 +4,10 @@
   </div>
   <div class="content-sub-form">
     <%- include('_form') %>
+  </div><br>
+  <div class="material-show-element">
+    <form action="<%- rootPath %>">
+      <input class="boton-material" id="boton-material" type="submit" value="Volver" />
+    </form>
   </div>
 </div>
