--- a/src/assets/styles/pattern_index.scss
+++ b/src/assets/styles/pattern_index.scss
@@ -81,27 +81,28 @@ h2 {
 }
 
 .all-pattern{
-  display:flex;
+  display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  height: 400px;
   overflow-y: scroll;
-  height: 200px;
+  margin-top: 20px;
+
 }
 
-.pattern-container{
-  width: 30%;
-  border-style: solid;
-  border-color: #26bfbf;
-  border-radius: 15px;
-  padding: 15px;
-  padding-bottom: 30px;
-}
+
 
 .pattern{
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 200px;
-  margin-bottom: 20px;
+  margin-bottom: 5%;
+  border-style: solid;
+  border-radius: 15px;
+  border-color: #26bfbf;
+  margin-right: 5%;
 }
 
 .pattern-element{
