--- a/src/views/users/_form.html.ejs
+++ b/src/views/users/_form.html.ejs
@@ -30,7 +30,7 @@
       </div>
       <div class="panel-content">
       	<% if (!user.isNewRecord) { %>
-        	<input class="input-list" type="password" name="password" size="40" required/>
+        	<input class="input-list" type="password" name="password" size="40" />
         <% } else { %>
             <input class="input-list" type="password" name="password" size="40"/>
         <% } %>
@@ -40,7 +40,7 @@
       </div>
       <div class="panel-content">
         <% if (!user.isNewRecord) { %>
-        	<input class="input-list" type="password" name="r_password" size="40" required/>
+        	<input class="input-list" type="password" name="r_password" size="40"/>
         <% } else { %>
             <input class="input-list" type="password" name="r_password" size="40"/>
         <% } %>
