--- a/src/views/users/show.html.ejs
+++ b/src/views/users/show.html.ejs
@@ -10,19 +10,26 @@
           <p>Correo: <%- user.email %></p>
           <p>Edad: <%- user.age %></p>
       </div>
+      <% if ((currentUser) && (currentUser.id !== user.id)) { %>
+        <div>
+          <%- include('_formFollow') %>
+        </div>
+      <% } %>
   </div>
-  <div class="user_show">
-    <form action="<%- editUserPath %>">
-      <input id="boton" type="submit" value="Editar Perfil" />
-    </form>
-  </div>
-  <div class="user_show">
-    <form action="<%- deleteUserPath %>" onclick="return confirm('Estás seguro?');"
-      method="POST">
-      <input type="hidden" name="_method" value="delete" />
-      <input id="boton" type="submit" value="Eliminar Cuenta" />
-    </form>
-  </div>
+  <% if ((currentUser) && ((currentUser.id === user.id) || (currentUser.role === 'admin'))) { %>
+    <div class="user_show">
+      <form action="<%- editUserPath %>">
+        <input id="boton" type="submit" value="Editar Perfil" />
+      </form>
+    </div>
+    <div class="user_show">
+      <form action="<%- deleteUserPath %>" onclick="return confirm('Estás seguro?');"
+        method="POST">
+        <input type="hidden" name="_method" value="delete" />
+        <input id="boton" type="submit" value="Eliminar Cuenta" />
+      </form>
+    </div>
+  <% } %>
   <br><br>
   <div>
     <form action="<%- usersPath %>">
