--- a/src/views/vote_patterns/_form.html.ejs
+++ b/src/views/vote_patterns/_form.html.ejs
@@ -9,7 +9,7 @@
     </div>
   <% } %>
   <form action="<%= votePatternPath %>" method="POST">
-    <% if (!votePattern.isNewRecord) { %>
+    <% if (votePattern) { %>
       <input type="hidden" name="_method" value="PATCH">
     <% } else { %>
       <div>
