:sparkles: Added favorite patterns.

--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -50,6 +50,8 @@
               <%- include('../vote_patterns/_form') %>
               <br>
               <%- include('_formAdd') %>
+              <br>
+              <%- include('_formFavorite') %>
             </div>
           <% } %>
         </div>
